<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_guess_number"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.liucheng.android.guessnumber.GuessNumberActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/createButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bunCreate"
            android:onClick="clickButton"/>

        <Button
            android:text="@string/showAnswerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bunShowAnswer"
            android:onClick="clickButton"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edtNumber"
            android:hint="@string/input"/>

        <Button
            android:text="@string/guessButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bunGuess"
            android:onClick="clickButton"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txvHint"
            android:textSize="30sp"/>
    </LinearLayout>
</RelativeLayout>
